<resources>
    <string name="app_name">Bar Tender</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    //Inventaire
    <string name="affichage_inventaire">Afficher l\'inventaire</string>
    <string name="ajout_boisson">Ajouter une boisson</string>
    <string name="retrait_boisson">Retirer une boisson</string>
    <string name="modification_dataStock">Modifier le stock</string>
    <string name="title_activity_choixinventaire">Choix</string>
    <string name="title_activity_inventaire">Inventaire</string>

    //Modification datastock
    <string name="modif">Modification du stock</string>
    <string name="nomboisson">Boisson </string>
    <string name="stock">Stock :</string>
    <string name="seuil">Seuil :</string>
    <string name="stockmax">Stock max :</string>
    <string name="applique">Appliquer</string>
    <string name="retour">Retour</string>
    <string name="title_activity_carte">carte</string>

    // Carte
    <string name="beug">Aucune recherche spécifiée</string>
    <string name="title_activity_consult_details">consult_details</string>
    <string name="consult_details_name_title">Nom de la boisson :</string>
    <string name="consult_details_description_title">Description :</string>
    <string name="consult_details_picture_title">Image :</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_paiement">Paiement</string>
    <string name="title_activity_addition">Addition</string>

    //Notification
    <string name="boisson_ajoutée">La boisson a été ajoutée</string>
    <string name= "boisson_retiré">La boisson a été retirée</string>
    <string name="boisson_erreur">Une erreur est survenue</string>
    <string name="Remplir_champs_boisson">"Remplir le champ Boisson !"</string>

</resources>