<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:useDefaultMargins="true"
    >

    <TextView
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_row="0"

        android:text="@string/modif"
        android:textSize="32dip" />

    <TextView

        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="1"
        android:text="@string/nomboisson" >
    </TextView>

    <EditText
        android:id="@+id/name"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="1"

        android:ems="10" />

    <TextView
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="2"
        android:text="Quantité" >
    </TextView>

    <EditText
        android:id="@+id/stock1"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="2"

        android:ems="4" />

    <Button
        android:id="@+id/appUp"
        android:layout_column="2"
        android:layout_row="3"
        android:text="@string/applique"
        android:layout_width="159dp" />
    <Button
        android:id="@+id/retourUp"
        android:layout_column="2"
        android:layout_row="4"
        android:text="@string/retour"
        android:layout_width="159dp" />

</GridLayout>