<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/show_list_titles"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/boutonNomBoisson"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/nomboisson"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/boutonStock"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/stock"
            android:textStyle="bold"/>


        <Button
            android:id="@+id/boutonStockMax"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/stockmax"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/boutonSeuil"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/seuil"
            android:textStyle="bold"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/show_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/show_list_titles"
        android:layout_above="@+id/returninv" />
        
        <Button
        android:id="@+id/returninv"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Retour"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

</RelativeLayout>
